# agraffe

./: 0144b065.43d442d3.js  0144b065.f98a116a.js  0871a21c.442f6af6.js  0871a21c.83f40646.js  11.e1ac1b7a.js  12.347181d1.js  17896441.7ecc1149.js  1df93b7f.e76245f9.js  1df93b7f.eb5276ee.js  404.html  7a40c8aa.19e2cf67.js  7a40c8aa.aed16259.js  935f2afb.3eaa9836.js  CNAME  LICENSE  Makefile  README.md  a09c2993.0cd4cb24.js  a09c2993.68102e4a.js  common.c233912e.js  format.ini  index.html  main.07921a31.js  main.cc1a6507.js  mypy.ini  pyproject.toml  runtime~main.0a61359d.js  runtime~main.5f872f21.js  sitemap.xml  styles.f8209636.css  styles.fe10cd86.js
.github/workflows/: deploy.yml  deploy_docs.yml  publish.yml  test.yml
agraffe/: __init__.py  types.py  utils.py
agraffe/services/: __init__.py  aws_lambda.py  azure_functions.py  base.py  google_cloud_functions.py
doc/: .prettierignore  .prettierrc.json  docusaurus.config.js  package.json  sidebars.js
doc/docs/: aws_lambda.md  azure_functions.md  google_cloud_functions.md  introduction.md
doc/src/css/: custom.css
doc/src/pages/: index.tsx  styles.module.css
docs/: index.html
docs/services/aws-lambda/: index.html
docs/services/azure-functions/: index.html
docs/services/google-cloud-functions/: index.html
example/: .gitignore  README.md  config.yaml  main.py  requirements.local.txt  requirements.txt  serverless_rest.yml
example/aws/: .gitignore  README.md  app.py  package.json  requirements.txt  serverless_http.yml  serverless_rest.yml  template_api.yaml  template_function_url.yaml  template_httpapi.yaml
example/aws/src/: app.py  main.py  requirements.txt
example/azure/: .gitignore  README.md  entry_point.py  models.py  requirements.txt
example/azure/cookies/: function.json
example/azure/empty/: function.json
example/azure/empty_text/: function.json
example/azure/file/: function.json
example/azure/file_and_form/: function.json
example/azure/form/: __init__.py  function.json
example/azure/image/: function.json
example/azure/items_get/: function.json
example/azure/items_post/: function.json
example/azure/lifespan/: function.json
example/azure/none/: function.json
example/azure/root/: function.json
example/azure/text/: function.json
example/azure/uploadfile/: function.json
example/gcp/: README.md  app.py  main.py
tests/aws/: app.py  fastapi_app.py  main.py  template.api.yaml  template.http.yaml  test_api.py  test_api_fastapi.py  test_http.py  test_http_fastapi.py
tests/azure/: app.py  entry_point.py  test.py  test_fastapi.py
tests/gcp/: fastapi_app.py  fastapi_main.py  main.py  test.py  test_fastapi.py
